# Backy-2

./: .gitattributes  .gitignore  Cargo.toml
backy_core/: Cargo.toml
backy_core/src/: chunker.rs  crypto.rs  lib.rs  repository.rs  storage_local.rs
backy_gui/: Cargo.toml  package-lock.json
backy_gui/frontend/: package-lock.json  package.json  vite.config.ts
backy_gui/frontend/src/: App.css  App.tsx  tauri.d.ts
backy_gui/src-tauri/: Cargo.toml  build_frontend_and_wait.sh  tauri.conf.json
backy_gui/src-tauri/src/: lib.rs  main.rs  sftp.rs
